v2.0 add stats
